--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Project2SynergyFrontend</title>
@@ -9,8 +10,26 @@
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/bluu" type="text/css" />
 </head>
+
 <body>
   <app-root></app-root>
+  <!-- <script>
+    var verbals = document.getElementsByClassName("isVerbal");
+
+    for (var i = 0; i < verbals.length; i++) {
+      if (verbals[i].innerHTML === 'true') {
+        verbals[i].innerHTML = "&#10004";
+        verbals[i].style.color = 'green';
+      }
+
+      else {
+        verbals[i].innerHTML = "&#100062";
+        verbals[i].style.color = 'red';
+      }
+    }
+  </script> -->
 </body>
+
 </html>
